# article

./: CMakeLists.txt  DEPLOYMENT.md  DISTRIBUTED_CHANGES.md  QUICKSTART.md  README.md  build_ubuntu.sh  deploy.sh  network.conf  network.conf.example  package.sh  start_all.sh  stop_all.sh  test_network.sh
Device/: main.cpp
Device/.cache/clangd/index/: main.cpp.3D0636F978D9F30F.idx
Server/: CMakeLists.txt  main.cpp
Server/.cache/clangd/index/: main.cpp.A1B372D8213C6EC9.idx
User/: CMakeLists.txt  main.cpp
User/.cache/clangd/index/: main.cpp.2C46E78031122783.idx
common/: config.hpp  crypto.hpp  net.hpp
cpp_chat/: CMakeLists.txt
cpp_chat/src/: client.cpp  server.cpp
device/: device_main.cpp
server/: server_main.cpp
test/: CMakeLists.txt  main.cpp
test/.cache/clangd/index/: main.cpp.9995C185EDFE4CA4.idx
test_2/: CMakeLists.txt  build_ubuntu.sh
test_2/common/: crypto.hpp  net.hpp  share.hpp
test_2/device/: device_main.cpp
test_2/server/: server_main.cpp
test_2/user/: user_main.cpp
user/: user_main.cpp
